Add the current version to the application's title bar (#21)