@@ -44,3 +44,61 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+<<<<<<< HEAD
+=======
+
+springBoot {
+    buildInfo()
+}
+
+// Distribution-specific tasks
+def dependenciesDir = "$buildDir/dependencies"
+def distributionDir = "$buildDir/dist"
+def binariesDir = "$distributionDir/bin"
+
+task copyDependencies(type: Copy, dependsOn: 'build') {
+	from configurations.runtimeClasspath
+	into dependenciesDir
+}
+
+task jdeps(dependsOn: 'copyDependencies') {
+    doLast {
+		exec {
+			def jdeps = new ByteArrayOutputStream()
+	        commandLine 'jdeps', '--class-path', '"build/dependencies/*"', '--multi-release', 'base', '--ignore-missing-deps', '-recursive', '--print-module-deps', "$buildDir/libs/${rootProject.name}-${version}.jar"
+	        standardOutput = jdeps
+		    ext.jdeps = jdeps
+	    }
+    }
+}
+
+task jlink(dependsOn: 'jdeps') {
+	doLast {
+		exec {
+			workingDir = projectDir
+	        commandLine 'jlink', '--output', "$binariesDir/jre", '--add-modules', 'java.base,java.compiler,java.desktop,java.instrument,java.management,java.naming,java.net.http,java.prefs,java.scripting,java.sql,jdk.jfr,jdk.unsupported' // TODO use "${tasks.jdeps.jdeps}"
+		}
+	}
+}
+
+task copyJar(type: Copy, dependsOn: 'build') {
+	from "$buildDir/libs"
+	into binariesDir
+	include "${rootProject.name}-${version}.jar"
+	rename "${rootProject.name}-${version}.jar", "${rootProject.name}.jar"
+}
+
+task copyTessdata(type: Copy) {
+	from "./bin/tessdata"
+	into "$binariesDir/tessdata"
+}
+
+task copyStartScript(type: Copy) {
+	from "./scripts"
+	into distributionDir
+	include "${rootProject.name}.bat"
+}
+
+task dist(dependsOn: ['copyJar', 'copyTessdata', 'copyStartScript', 'jlink']) {
+}
+>>>>>>> 42baa20... Add the current version to the application's title bar (#21)
